[tool.poetry]
name = "pymyob-2"
version = "0.1.0"
description = ""
authors = ["Wardy <wardy3+gitlab@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
requests-oauthlib = "^1.3.0"
twine = "^3.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
